After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 784583 - Pixdata fixes
Pixdata fixes
Status: RESOLVED FIXED
Product: gdk-pixbuf
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gdk-pixbuf-maint
gdk-pixbuf-maint
Depends on:
Blocks:
 
 
Reported: 2017-07-05 21:24 UTC by Bastien Nocera
Modified: 2017-07-12 11:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gdk-pixbuf-io: Remove unused flags variable (1.21 KB, patch)
2017-07-05 21:24 UTC, Bastien Nocera
committed Details | Review
gdk-pixbuf-io: Check length before checking for pixdata magic (916 bytes, patch)
2017-07-05 21:24 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2017-07-05 21:24:11 UTC
.
Comment 1 Bastien Nocera 2017-07-05 21:24:15 UTC
Created attachment 354967 [details] [review]
gdk-pixbuf-io: Remove unused flags variable
Comment 2 Bastien Nocera 2017-07-05 21:24:21 UTC
Created attachment 354968 [details] [review]
gdk-pixbuf-io: Check length before checking for pixdata magic
Comment 3 Bastien Nocera 2017-07-12 11:23:19 UTC
Attachment 354967 [details] pushed as ec1b4b2 - gdk-pixbuf-io: Remove unused flags variable
Attachment 354968 [details] pushed as ac95d0d - gdk-pixbuf-io: Check length before checking for pixdata magic