gdk-pixbuf-io: Remove unused flags variable

https://bugzilla.gnome.org/show_bug.cgi?id=784583